Fix minor spacing/overflow issue

--- a/src/styles/_app.sass
+++ b/src/styles/_app.sass
@@ -223,7 +223,7 @@ $item_footer_button_height: 32px
     border: none
     padding-right: 44px
     padding-left: $item_poster_width_medium
-    margin-top: 100px
+    margin-top: 80px
 
 .item__footer
   display: flex
